--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a sample nodejs app with apis",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "node_modules/.bin/mocha --reporter mocha-junit-reporter"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,9 @@
   },
   "homepage": "https://github.com/dalon1/nodejs-api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "chai": "^4.2.0",
+    "express": "^4.17.1",
+    "mocha": "^6.1.4",
+    "mocha-junit-reporter": "^1.23.0"
   }
 }
